force-app/main/default/objects/ServiceResource/fields/Duty_End__c.field-meta.xml
<CustomField>
    <fullName>Duty_End__c</fullName>
    <formula>Fit_For_Duty_Work_Order__r.Duty_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duty End</label>
    <type>DateTime</type>
</CustomField>