force-app/main/default/objects/ServiceResource/fields/DutyStartTime__c.field-meta.xml
<CustomField>
    <fullName>DutyStartTime__c</fullName>
    <description>Start time of the Duty. Used to control the sort order of duties in formula field GanttSort1.
AJ 21/05/20 - Changed Field Type from Date/Time</description>
    <label>Duty Start Time</label>
    <type>Time</type>
</CustomField>