force-app/main/default/objects/ServiceResource/fields/Fit_For_Duty_Hrs_Since_Passed__c.field-meta.xml
<CustomField>
    <fullName>Fit_For_Duty_Hrs_Since_Passed__c</fullName>
    <description>The number of hours since Fit For Duty Check was passed</description>
    <formula>(NOW() - Fit_For_Duty_Passed__c)*24</formula>
    <label>Fit For Duty Hrs Since Passed</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>