force-app/main/default/objects/ServiceResource/fields/Fit_For_Duty_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Fit_For_Duty_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fit For Duty Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Service Resources (Fit For Duty Work Order)</relationshipLabel>
    <relationshipName>Service_Resources1</relationshipName>
    <type>Lookup</type>
</CustomField>