force-app/main/default/objects/ServiceResource/listViews/AJ_Drivers_Dandenong.listView-meta.xml
<ListView>
    <fullName>AJ_Drivers_Dandenong</fullName>
    <columns>Name</columns>
    <columns>ServiceCrew</columns>
    <columns>IsActive</columns>
    <columns>Description</columns>
    <columns>ResourceType</columns>
    <columns>Location</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ResourceType</field>
        <operation>equals</operation>
        <value>T</value>
    </filters>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>AJ - Drivers Dandenong</label>
</ListView>