force-app/main/default/objects/ServiceResource/listViews/AJ_Duties_Dandenong.listView-meta.xml
<ListView>
    <fullName>AJ_Duties_Dandenong</fullName>
    <columns>Name</columns>
    <columns>ServiceCrew</columns>
    <columns>DutyStartTime__c</columns>
    <columns>FSL__GanttLabel__c</columns>
    <columns>IsActive</columns>
    <columns>Description</columns>
    <columns>ResourceType</columns>
    <columns>Location</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ResourceType</field>
        <operation>equals</operation>
        <value>C</value>
    </filters>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Name</field>
        <operation>startsWith</operation>
        <value>DT</value>
    </filters>
    <label>AJ - Duties Dandenong</label>
</ListView>