force-app/main/default/objects/ServiceResource/listViews/Chris_Blackledge.listView-meta.xml
<ListView>
    <fullName>Chris_Blackledge</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <filterScope>Mine</filterScope>
    <label>Chris Blackledge</label>
</ListView>