force-app/main/default/objects/ServiceResource/listViews/Melbourne.listView-meta.xml
<ListView>
    <fullName>Melbourne</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ResourceType</field>
        <operation>equals</operation>
        <value>T</value>
    </filters>
    <filters>
        <field>ResourceType</field>
        <operation>equals</operation>
        <value>T,D,P</value>
    </filters>
    <label>Melbourne</label>
</ListView>