force-app/main/default/objects/ServiceResource/listViews/Noel_melissa.listView-meta.xml
<ListView>
    <fullName>Noel_melissa</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>Location</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RelatedRecord</field>
        <operation>contains</operation>
        <value>melissa</value>
    </filters>
    <label>Melissa</label>
    <language>en_US</language>
</ListView>