force-app/main/default/objects/ServiceResource/listViews/Northgate.listView-meta.xml
<ListView>
    <fullName>Northgate</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>Location</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Location</field>
        <operation>equals</operation>
        <value>Northgate</value>
    </filters>
    <label>Northgate</label>
</ListView>