force-app/main/default/objects/ServiceResource/listViews/Northgate1.listView-meta.xml
<ListView>
    <fullName>Northgate1</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>Location</columns>
    <filterScope>Everything</filterScope>
    <label>Northgate</label>
</ListView>