force-app/main/default/objects/ServiceResource/listViews/WA_Transport_Drivers.listView-meta.xml
<ListView>
    <fullName>WA_Transport_Drivers</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location</field>
        <operation>equals</operation>
        <value>WA Transport</value>
    </filters>
    <label>WA Transport Drivers</label>
</ListView>